--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: node_js
 node_js:
   - '0.10'
 before_script:
-  - apt-get update
-  - apt-get install graphicsmagick
+  - sudo apt-get update
+  - sudo apt-get install graphicsmagick
   - npm install -g grunt-cli
